Get a first version filtering 0 tweets but working